# IncludeOS

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  clang-6.0-linux-x86_64-bv  conanfile.py  copytousb.sh  docker-compose.yml
api/: info  smp
api/kernel/: bitvisor_manager.hpp
app1/: CMakeLists.txt  conanfile.txt  config.json  eval1.cpp  install_to_bv.sh  main.cpp  start.c
app1/disk1/static/: test1.html
bitvisor/: CMakeLists.txt  binding.cpp  bitvisor.hpp
cmake/: linux.service.cmake  os.cmake
etc/: layout.txt
examples/demo_service/: conanfile_bk.txt
src/: CMakeLists.txt
src/arch/x86_64/: ist.cpp  linker.ld  syscall_entry.cpp
src/drivers/: CMakeLists.txt  bvnet.cpp  bvnet.hpp
src/hal/: machine.cpp
src/include/: kernel.hpp
src/kernel/: CMakeLists.txt  events.cpp  kernel.cpp  panic.cpp  threads.cpp  timers.cpp
src/musl/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/kvm/: kvmclock.cpp
src/platform/x86_bitvisor/: CMakeLists.txt  bitvisor_manager.cpp  kernel_start.cpp  os.cpp  platform.cpp  sanity_checks.cpp  serial1.cpp  start.asm
src/platform/x86_nano/: kernel_start.cpp  platform.cpp
src/platform/x86_pc/: apic_timer.cpp  init_libc.cpp  os.cpp  rand.cpp
